build/log/idf_py_stdout_output_79366
[0/2] Re-checking globbed directories...
[1/17] Building C object esp-idf/car_motion/CMakeFiles/__idf_car_motion.dir/car_motion.c.obj
[2/17] Performing build step for 'bootloader'
[1/1] cd /home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/build/bootloader/esp-idf/esptool_py && /home/smr/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/smr/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/build/bootloader/bootloader.bin
Bootloader binary size 0x51a0 bytes. 0x2e60 bytes (36%) free.
[3/15] Building C object esp-idf/encoder/CMakeFiles/__idf_encoder.dir/encoder.c.obj
[4/15] Building C object esp-idf/pwm_motor/CMakeFiles/__idf_pwm_motor.dir/pwm_motor.c.obj
FAILED: esp-idf/pwm_motor/CMakeFiles/__idf_pwm_motor.dir/pwm_motor.c.obj 
/home/smr/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/build/config -I/home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/components/pwm_motor -I/home/smr/esp/esp-idf/components/newlib/platform_include -I/home/smr/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/smr/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/smr/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/smr/esp/esp-idf/components/freertos/esp_additions/include -I/home/smr/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/smr/esp/esp-idf/components/esp_hw_support/include -I/home/smr/esp/esp-idf/components/esp_hw_support/include/soc -I/home/smr/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/smr/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/smr/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/smr/esp/esp-idf/components/heap/include -I/home/smr/esp/esp-idf/components/log/include -I/home/smr/esp/esp-idf/components/soc/include -I/home/smr/esp/esp-idf/components/soc/esp32s3 -I/home/smr/esp/esp-idf/components/soc/esp32s3/include -I/home/smr/esp/esp-idf/components/hal/esp32s3/include -I/home/smr/esp/esp-idf/components/hal/include -I/home/smr/esp/esp-idf/components/hal/platform_port/include -I/home/smr/esp/esp-idf/components/esp_rom/include -I/home/smr/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/smr/esp/esp-idf/components/esp_rom/esp32s3 -I/home/smr/esp/esp-idf/components/esp_common/include -I/home/smr/esp/esp-idf/components/esp_system/include -I/home/smr/esp/esp-idf/components/esp_system/port/soc -I/home/smr/esp/esp-idf/components/esp_system/port/include/private -I/home/smr/esp/esp-idf/components/xtensa/include -I/home/smr/esp/esp-idf/components/xtensa/esp32s3/include -I/home/smr/esp/esp-idf/components/lwip/include -I/home/smr/esp/esp-idf/components/lwip/include/apps -I/home/smr/esp/esp-idf/components/lwip/include/apps/sntp -I/home/smr/esp/esp-idf/components/lwip/lwip/src/include -I/home/smr/esp/esp-idf/components/lwip/port/include -I/home/smr/esp/esp-idf/components/lwip/port/freertos/include -I/home/smr/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/smr/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/smr/esp/esp-idf/components/driver/include -I/home/smr/esp/esp-idf/components/driver/deprecated -I/home/smr/esp/esp-idf/components/driver/analog_comparator/include -I/home/smr/esp/esp-idf/components/driver/dac/include -I/home/smr/esp/esp-idf/components/driver/gpio/include -I/home/smr/esp/esp-idf/components/driver/gptimer/include -I/home/smr/esp/esp-idf/components/driver/i2c/include -I/home/smr/esp/esp-idf/components/driver/i2s/include -I/home/smr/esp/esp-idf/components/driver/ledc/include -I/home/smr/esp/esp-idf/components/driver/mcpwm/include -I/home/smr/esp/esp-idf/components/driver/parlio/include -I/home/smr/esp/esp-idf/components/driver/pcnt/include -I/home/smr/esp/esp-idf/components/driver/rmt/include -I/home/smr/esp/esp-idf/components/driver/sdio_slave/include -I/home/smr/esp/esp-idf/components/driver/sdmmc/include -I/home/smr/esp/esp-idf/components/driver/sigma_delta/include -I/home/smr/esp/esp-idf/components/driver/spi/include -I/home/smr/esp/esp-idf/components/driver/temperature_sensor/include -I/home/smr/esp/esp-idf/components/driver/touch_sensor/include -I/home/smr/esp/esp-idf/components/driver/twai/include -I/home/smr/esp/esp-idf/components/driver/uart/include -I/home/smr/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/smr/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/smr/esp/esp-idf/components/esp_pm/include -I/home/smr/esp/esp-idf/components/esp_ringbuf/include -I/home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/managed_components/espressif__bdc_motor/include -I/home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/managed_components/espressif__bdc_motor/interface -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive=. -fmacro-prefix-map=/home/smr/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/pwm_motor/CMakeFiles/__idf_pwm_motor.dir/pwm_motor.c.obj -MF esp-idf/pwm_motor/CMakeFiles/__idf_pwm_motor.dir/pwm_motor.c.obj.d -o esp-idf/pwm_motor/CMakeFiles/__idf_pwm_motor.dir/pwm_motor.c.obj -c /home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/components/pwm_motor/pwm_motor.c
/home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/components/pwm_motor/pwm_motor.c: In function 'PwmMotor_Init_M2':
/home/smr/esp/Samples/extra_components/micro_ros_espidf_component/microros_esp32_diffdrive/components/pwm_motor/pwm_motor.c:70:38: error: expected expression before ',' token
   70 |         .pwmb_gpio_num = PWM_GPIO_M2A,
      |                                      ^
[5/15] Building C object esp-idf/motor/CMakeFiles/__idf_motor.dir/motor.c.obj
[6/15] Linking C static library esp-idf/encoder/libencoder.a
[7/15] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
ninja: build stopped: subcommand failed.
